		variable was used. Also, the pc-relative _load_ code was
		used for stores as well, which was completely incorrect.
		On ARM, since pc-relative loads are converted into immediate
		movs, on writes to pages that contain such translations, the
		ENTIRE page must be invalidated, not just the 1/32th that
		was code. This has now been implemented.

==============  RELEASE 0.4.6.5  ==============

20080808	Applying a patch from Kiyotaka Inaba which causes an ARM UND
		exception to be generated by the instruction word 0xe6000011,
		which is needed by gdb when running inside the emulator.
		Also enabling ARM UND exceptions for ARM floating point
		instructions (needed by both Linux and NetBSD/arm).
20081103	Fix for a free() bug in bootblock_iso9660.c.
		Updating the OpenBSD/landisk installation instructions from
		4.2 to 4.4, after verifying that it works.
20081104	NOTE: I'm throwing away the C++ rewrite attempt ("0.5.x"),
		moving back gxemul-legacy to gxemul/trunk. The old C++
		rewrite attempt is archived under gxemul/branches/.
20081109	Updating most NetBSD 4.0 install instructions to 4.0.1.

==============  RELEASE 0.4.6.6  ==============

20081114	Adding the M88K 'add' instruction for immediate values
		(add_imm in cpu_m88k_instr.c).
		Continuing on dev_pcc2 (used by mvme187).
		Working on M88K interrupts. Very unstable so far; OpenBSD/
		mvme88k bugs out randomly after the first few interrupts.
20081115	More work on dev_pcc2.
		Found the "random" failure bug: the M88K interrupt handling
		code didn't execute the interrupted instruction, but skipped
		it instead.
		Fixing a bug in the implementation of the m88k 'ext'
		instruction (it worked like extu!).
		Adding disassembly of all 88100 floating point instructions.
		Minor updates to make the code build with GCC "4.4.0 20081017".
20081116	Implementing the m88k flt.ss, flt.ds, trnc.ss, trnc.sd, and
		fadd.dds floating point instructions.
20081121	Updating the HelenOS version in the documentation to 0.3.0.